cif/org.eclipse.escet.cif.tests/tests/event_based/controllability_check/evt_non_ctrl.err
ERROR: Failed to apply controllability check for CIF file "event_based/controllability_check/evt_non_ctrl.cif".
CAUSE: CIF controllability check tool failed due to unsatisfied preconditions:

  --------------------------------------------------------------
  (1/1) Event is not declared as controllable or uncontrollable.
  --------------------------------------------------------------
   * In the top-level scope of the specification:
     - event e;
             ^
